--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,6 +12,10 @@
     <img class="round" src="assets/imgs/logo.jpg">
   </ion-item>
 
+  <ion-item text-center no-lines>
+    <h1>FEEDLY</h1>
+  </ion-item>
+
   <ion-grid style="width: 75%;">
     <ion-row class="rowStyle">
       <ion-input type="text" placeholder="Enter your email" [(ngModel)]="email"></ion-input>
