--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -11,6 +11,10 @@
     <ion-item text-center no-lines>
       <img class="round" src="assets/imgs/logo.jpg">
     </ion-item>
+
+    <ion-item text-center no-lines>
+      <h1>FEEDLY</h1>
+    </ion-item>
   
     <ion-grid style="width: 75%;">
       <ion-row class="rowStyle">
